# my-webapp-back-stub

./: .dockerignore  .gitignore  README.md  app.py  pyproject.toml  run.py  run.sh
templates/: base.html  echo.html  index.html  page.html
