[tool.poetry]
name = "demo"
version = "0.1.0"
description = ""
authors = ["QwiglyDee <qwiglydee@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
starlette = "^0.37.2"
uvicorn = "^0.29.0"
jinja2 = "^3.1.3"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
